feat: selecionar uma ong e mostrar apenas os pets da ong selecionada

--- a/CRUD-WPF/CadastroOng.xaml
+++ b/CRUD-WPF/CadastroOng.xaml
@@ -113,7 +113,8 @@
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
             Click="Button_Click"
-            Content="Salvar" />
+            Content="Salvar"
+            FontSize="14" />
 
     </Grid>
 </Window>
